WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293857
[macOS] Content inset fill capture color sometimes fails to update when the page background changes
https://bugs.webkit.org/show_bug.cgi?id=293857
Summary
[macOS] Content inset fill capture color sometimes fails to update when the p...
Wenson Hsieh
Reported
2025-05-31 13:35:39 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-05-31 14:16:42 PDT
rdar://152108302
Wenson Hsieh
Comment 2
2025-05-31 15:13:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46173
EWS
Comment 3
2025-05-31 17:29:14 PDT
Committed
295658@main
(c24c921ec825): <
https://commits.webkit.org/295658@main
> Reviewed commits have been landed. Closing PR #46173 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug