[macOS] Content inset fill capture color sometimes fails to update when the page background changes https://bugs.webkit.org/show_bug.cgi?id=293857 rdar://152108302

Reviewed by Abrar Rahman Protyasha.

Ensure that the content inset fill view capture color does not become stale in the case where only
the page background color changes.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _updateTopContentInsetFillCaptureColor]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:
* Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.mm:
(WebKit::PageClientImplCocoa::underPageBackgroundColorDidChange):
* Source/WebKit/UIProcess/mac/WebViewImpl.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::pageDidScroll):
(WebKit::WebViewImpl::updateTopContentInsetFillCaptureColor):

Move logic to update the content inset fill view's capture color out into a helper method, so we can
call it when the page background color changes.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/ObscuredContentInsets.mm:
(TestWebKitAPI::TEST(ObscuredContentInsets, ContentInsetFillCaptureColor)):

Add an API test to exercise this change, by validating that the capture color changes when the page
background color changes.

Canonical link: https://commits.webkit.org/295658@main